test different title

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="title">
         <!-- <span>Richard</span> -->
-        <span class="central-title"><em>Cedric</em></span>
+        <span class="central-title"><em>Cedric Hodgson</em></span>
         <!-- <span>Hodgson</span> -->
       </div>
     </header>
