Extend footer and move font size to root

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <footer class="footer">
       <div class="footer-content">
-        <p>CeddyBear</p>
+        <p>@CeddyBear-2022</p>
       </div>
     </footer>
   </body>
